crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@15.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE num_exp_mul (id1 int4, id2 int4, expected numeric(1000,800));"
---
CreateStmt@0..74
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..24
    Ident@13..24 "num_exp_mul"
  Whitespace@24..25 " "
  Ascii40@25..26 "("
  ColumnDef@26..34
    Ident@26..29 "id1"
    Whitespace@29..30 " "
    TypeName@30..34
      Ident@30..34 "int4"
  Ascii44@34..35 ","
  Whitespace@35..36 " "
  ColumnDef@36..44
    Ident@36..39 "id2"
    Whitespace@39..40 " "
    TypeName@40..44
      Ident@40..44 "int4"
  Ascii44@44..45 ","
  Whitespace@45..46 " "
  ColumnDef@46..71
    Ident@46..54 "expected"
    Whitespace@54..55 " "
    TypeName@55..71
      Numeric@55..62 "numeric"
      Ascii40@62..63 "("
      AConst@63..67
        Iconst@63..67 "1000"
      Ascii44@67..68 ","
      AConst@68..71
        Iconst@68..71 "800"
  Ascii41@71..72 ")"
  Ascii41@72..73 ")"
  Ascii59@73..74 ";"

